katy found missing /

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,14 @@
 
 <div class="container">
 
-  {{#each projects}}
+
+  {{#each blogs}}
       <div class="card">
         <div class="card-header">
           <h2>{{name}}</h2>
         </div>
         <div class="card-body">
           <p>{{description}}</p>
-          <p>{{needed_funding}}</p>
         </div>
       </div>
   {{/each}}
