--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <form action="">
   <label for="">Email</label>
-  <input type="text">
+  <input type="text" />
   <button>Submit</button>
 </form>
 
