--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -4,11 +4,10 @@
 
       <div class="card">
         <div class="card-header">
-          <h2>{{project.name}}</h2>
+          <h2>{{blog.name}}</h2>
         </div>
         <div class="card-body">
-          <p>{{project.description}}</p>
-          <p>{{project.needed_funding}}</p>
+          <p>{{blog.description}}</p>
         </div>
       </div>
 
