--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Blog</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
   <header>
     <h1>Tech Blog</h1>
-    <nav></nav>
+    <nav>
+      <a class="link" href="/">Home</a>
+      <a class="link" href="/dashboard">Dashboard</a>
+      {{#if loggedIn}}
+      <a class="link" href="/" id="logout">Logout</a>
+      {{else}}
+      <a class="link" href="/login">Login</a>
+      {{/if}}
+    </nav>
   </header>
 
   {{{body}}}
 
 
   <footer>&copy; 2023</footer>
+  
 </body>
+
 </html>
