commit after session with tutor

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,11 +14,11 @@
     <nav>
       <a class="link" href="/">Home</a>
       <a class="link" href="/dashboard">Dashboard</a>
-      {{#if loggedIn}}
-      <a class="link" href="/" id="logout">Logout</a>
-      {{else}}
+      {{!-- {{#if logged_in}} --}}
+     {{!-- <button class="no-button" id="logout">logout</button> --}}
+      {{!-- {{else}} --}}
       <a class="link" href="/login">Login</a>
-      {{/if}}
+      {{!-- {{/if}} --}}
     </nav>
   </header>
 
